# ReelTranscode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: reeltranscode.yaml
launchd/: com.reelfin.reeltranscode.watch.plist
macos/ReelTranscodeApp/: Info.plist  README.md  project.yml
macos/ReelTranscodeApp/ReelTranscodeApp.xcodeproj/: project.pbxproj
macos/ReelTranscodeApp/Resources/lib/: libjpeg.8.dylib  libogg.0.dylib  libtheora.1.dylib  libzen.0.dylib
macos/ReelTranscodeApp/Sources/App/: AppViewModel.swift  ReelTranscodeApp.swift
macos/ReelTranscodeApp/Tests/: APIModelsTests.swift  LaunchdServiceTests.swift  PerformanceProfileTests.swift  RuntimeInstallerTests.swift
reeltranscode/: __init__.py  analyzer.py  cli.py  config.py  decision_engine.py  ffmpeg_runner.py  models.py  pipeline.py  planner.py  reporter.py  retry.py  scanner.py  state_store.py  subtitle_ocr.py  tooling.py  utils.py  validator.py  watcher.py
scripts/: setup_watch.sh
tests/integration/: test_command_planner.py
tests/unit/: test_analyzer_dolby_vision_evidence.py  test_analyzer_ffprobe_fallback.py  test_cli_json_api.py  test_decision_engine.py  test_pipeline_dv_guard.py  test_pipeline_probe_failure_visible.py  test_pipeline_reporter_failure_visible.py  test_utils.py  test_validator_dv_preservation.py  test_watcher_seed.py
tools/: build_backend.sh  build_mp4muxer.sh  bundle_macos_binary.py  collect_runtime_assets.sh  ffmpeg_dovi_compat.sh  release_macos.sh  release_macos_local.sh  smoke_test_packaged_backend.sh
(+14 files in other folders)
