[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reeltranscode"
version = "0.1.0"
description = "Apple-focused media library optimization pipeline for Jellyfin/Plex-like stacks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "watchdog>=4.0.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
reeltranscode = "reeltranscode.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["reeltranscode*"]
